--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
-        "express": "^4.21.2"
+        "express": "^4.21.2",
+        "lodash": "^4.17.21",
+        "winston": "^3.17.0"
     }
 }
